# revenue_forecast

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
scripts/: build_feature_store.py  collect_weather.py  run_eda.py  train.py
src/revenue_forecast/: __init__.py  config.py
src/revenue_forecast/data/: __init__.py  land_price.py  weather_api.py
src/revenue_forecast/features/: __init__.py  build_features.py  day_factor.py  feature_selection.py  weather_score.py
src/revenue_forecast/models/: __init__.py  _patches.py  allocation.py  analyze_tft.py  train_lstm.py  train_mlp.py  train_tft.py
src/revenue_forecast/models/experimental/: __init__.py  hierarchical.py
