[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "revenue-forecast"
version = "0.1.0"
description = "Carsharing Revenue-Per-Vehicle (RPV) forecasting with a Temporal Fusion Transformer."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
